# BAH2025

./: .gitignore  README.md  advanced_training_logs.txt  baseline_training_logs.txt  deeplab_advanced_logs.txt  experiments.json  main.py  plot_results.py  pyproject.toml  temp_plot.py
logs/: A1_unet_ce_adam_logs.txt
