[project]
name = "bah2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations==1.3.1",
    "matplotlib>=3.10.3",
    "opencv-python-headless>=4.12.0.88",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "segmentation-models-pytorch>=0.5.0",
    "tqdm>=4.67.1",
]
